[package]
name = "nmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-print = "0.3"
id3 = "1.8"
image = "0.24.7"
itertools = "0.11"
metaflac = "0.2"
path-absolutize = "3.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
strum = { version = "0.25", features = ["derive"] }
tempdir = "0.3"
thiserror = "1.0"
walkdir = "2.4"
