[package]
name = "nmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-print = "0.3"
id3 = "1.13"
image = "0.25"
itertools = "0.12"
metaflac = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
strum = { version = "0.26", features = ["derive"] }
tempdir = "0.3"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5"
