[package]
name = "nmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ape = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-print = "0.3"
common-path = "1.0"
id3 = "1.16"
image = "0.25"
itertools = "0.13"
metaflac = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
tempdir = "0.3"
thiserror = "2.0"
walkdir = "2.5"
